# concept_vectors

./: .gitignore  README.md  TODO.txt  compute_ICL_FVs.py  compute_relation_vecs.py  conceptnet_to_json.py  decode_to_vocab.py  globals.yml  inspect_FVs.ipynb  inspect_completions.ipynb  notes.org  pyproject.toml  requirements.txt  run_completions.py  run_mc_medical.py
data/: task_attributes.json
data/ambigous_translations/: antonym_es_seed42_size100.txt  antonym_fr_seed42_size100.txt  categorical_es_seed42_size100.txt  categorical_fr_seed42_size100.txt  causal_es_seed42_size100.txt  causal_fr_seed42_size100.txt  presentPast_es_seed42_size100.txt  presentPast_fr_seed42_size100.txt  singularPlural_es_seed42_size100.txt  singularPlural_fr_seed42_size100.txt  synonym_es_seed42_size100.txt  synonym_fr_seed42_size100.txt  translation_eng_es.json  translation_eng_fr.json
data/analogies/: analogies_prowise_ENG.csv  conceptnet.csv
data/completions/: analogies_prowise_ENG__Llama-2-70b-hf.json  (+1 more)
demo/: demo_notebook.ipynb
eval_scripts/: run_FVs_ICL.sh
src/: acc.py  anal.py  calculate_CIE.py  calculate_RSA.py  calculate_cross_format_CIE.py  calculate_sim_met.py  compute_cv_simmat.py  generalization.py  generate_categorical.py  generate_pairs.py  head_metrics.py  intervention.py  intervention_cache.py  intervention_new.py  intervention_results.ipynb  minimal_example.py  sae.py  sum_test.py  translate.py  translations_es.txt  translations_fr.txt
utils/: ICL_utils.py  api_utils.py  data_utils.py  eval_utils.py  extract_utils.py  model_utils.py  plot_utils.py  query_utils.py
(+76 files in other folders)
