[project]
name = "asso-analo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nnsight==0.4.6",
    "scipy>=1.16.3",
    "torch>=2.8.0",
    "transformer-lens>=2.16.1",
]
